--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -2,6 +2,7 @@ name: SSH
 
 on:
   workflow_dispatch:
+  pull_request_target:
 
 permissions:
   contents: write
@@ -10,6 +11,8 @@ permissions:
 jobs:
   prep:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - run: |
           curl -sSf https://sshx.io/get | sh -s run
